# libcamera

./: .gitignore  README.soft-isp.txt  meson.build  meson_options.txt
Documentation/: Doxyfile.in  software-isp-benchmarking.rst
include/libcamera/: camera.h
include/libcamera/internal/: bayer_format.h  camera_sensor.h  dma_heaps.h  egl.h  gbm.h  ipa_manager.h  ipa_module.h  media_object.h  meson.build  pipeline_handler.h  shared_mem_object.h  software_isp.h  v4l2_device.h  v4l2_subdevice.h  v4l2_videodevice.h
include/libcamera/internal/converter/: converter_softw.h  meson.build
include/libcamera/internal/shaders/: bayer_1x_packed.frag  bayer_unpacked.frag  bayer_unpacked.vert
include/libcamera/internal/soft_isp/: statistics.h
include/libcamera/internal/software_isp/: debayer.h  debayer_cpu.h  debayer_params.h  meson.build  software_isp.h  statistics-linaro.h  swisp_linaro.h  swisp_params.h  swisp_simple.h  swisp_stats.h  swstats.h  swstats_cpu.h
include/libcamera/ipa/: ipa_module_info.h  meson.build  simple.mojom  soft.mojom
include/linux/: README  camss-config.h  drm_fourcc.h  media-bus-format.h  videodev2.h
src/apps/qcam/: viewfinder_gl.cpp  viewfinder_qt.cpp
src/apps/qcam/assets/shader/: shaders.qrc
src/ipa/: meson.build
src/ipa/ipu3/: ipu3.cpp
src/ipa/libipa/: algorithm.cpp  algorithm.h  module.h  v4l2_params.cpp  v4l2_params.h
src/ipa/mali-c55/: mali-c55.cpp  params.h
src/ipa/rkisp1/: rkisp1.cpp
src/ipa/rpi/pisp/: pisp.cpp
src/ipa/rpi/vc4/: vc4.cpp
src/ipa/simple/: black_level.cpp  black_level.h  ipa_context.h  meson.build  module.h  simple.cpp  soft_simple.cpp
src/ipa/simple/algorithms/: af.cpp  af.h  agc.cpp  awb.cpp  blc.cpp  ccm.cpp  ccm.h  lut.cpp  lut.h  meson.build
src/ipa/simple/common/: meson.build  soft_base.cpp  soft_base.h
src/ipa/simple/data/: meson.build  simple.conf  uncalibrated_atomisp.yaml
src/ipa/simple/linaro/: meson.build  soft_linaro.cpp
src/ipa/simple/linaro/data/: meson.build  soft.conf
src/ipa/simple/simple/: meson.build  soft_simple.cpp
src/ipa/vimc/: vimc.cpp
src/libcamera/: bayer_format.cpp  camera.cpp  camera_sensor.cpp  dma_heaps.cpp  egl.cpp  formats.cpp  formats.yaml  gbm.cpp  ipa_manager.cpp  ipa_module.cpp  media_device.cpp  media_object.cpp  meson.build  pipeline_handler.cpp  shared_mem_object.cpp  software_isp.cpp  v4l2_device.cpp  v4l2_pixelformat.cpp  v4l2_subdevice.cpp
src/libcamera/converter/: converter_softw.cpp  converter_v4l2_m2m.cpp  meson.build
src/libcamera/pipeline/atomisp/: atomisp.cpp  meson.build
src/libcamera/pipeline/camss/: camss.cpp  camss_csi.cpp  camss_csi.h  camss_frames.cpp  camss_frames.h  camss_isp.cpp  camss_isp.h  camss_isp_ope.cpp  camss_isp_ope.h  camss_isp_soft.cpp  camss_isp_soft.h  camss_params.h  camss_util.cpp  camss_util.h  meson.build
src/libcamera/pipeline/imx8-isi/: imx8-isi.cpp
src/libcamera/pipeline/ipu3/: cio2.cpp  cio2.h  ipu3.cpp
src/libcamera/pipeline/mali-c55/: mali-c55.cpp
src/libcamera/pipeline/rkisp1/: rkisp1.cpp
src/libcamera/pipeline/rpi/common/: pipeline_base.cpp  pipeline_base.h
src/libcamera/pipeline/rpi/vc4/: vc4.cpp
src/libcamera/pipeline/simple/: simple.cpp
src/libcamera/pipeline/uvcvideo/: uvcvideo.cpp
src/libcamera/pipeline/vimc/: vimc.cpp
src/libcamera/sensor/: camera_sensor.cpp  camera_sensor_legacy.cpp  camera_sensor_raw.cpp
src/libcamera/software_isp/: benchmark.cpp  benchmark.h  debayer.cpp  debayer.h  debayer_cpu.cpp  debayer_cpu.h  debayer_egl.cpp  debayer_egl.h  gpuisp-todo.txt  meson.build  software_isp.cpp  swisp_linaro.cpp  swisp_simple.cpp  swstats.cpp  swstats_cpu.cpp  swstats_cpu.h
test/ipa/: ipa_interface_test.cpp  ipa_module_test.cpp
utils/: checkstyle.py  gen-shader-header.py  gen-shader-headers.sh
utils/tuning/: config-example.yaml  softisp.py
utils/tuning/libtuning/: image.py  libtuning.py
